--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,13 +1,56 @@
-name: Build Docker image
+name: Build
 
 on:
   push:
     branches:
-      - master
+      - 'master'
+  pull_request:
 
 jobs:
-  build-docker:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: docker build -t excalidraw .
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - 
+        name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      -
+        name: Set full names of the Docker image
+        id: set_full_names
+        run: echo "::set-output name=full_names::kuaifan/excalidraw"
+
+      -
+        name: Build and push Docker image kuaifan/excalidraw
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: ${{ steps.set_full_names.outputs.full_names }}
+
+      -
+        name: Image digest of kuaifan/excalidraw
+        run: echo ${{ steps.docker_build.outputs.digest }}
